syntax = "proto3";

package proto;

option go_package = "gRPC/proto;proto";

import "google/protobuf/empty.proto";

service FilesService {
  rpc SendToGRPCServer (stream FileSendRequest) returns (FileSendResponse);
  rpc DeleteFromGRPCServer (FileDeleteRequest) returns (google.protobuf.Empty);
  rpc GetFromGRPCServer (FileGetRequest) returns (stream FileGetResponse);
}

message FileSendRequest {
  oneof request {
    string fileName = 1;
    bytes chunk = 2;
  }
}

message FileSendResponse {
  string newFileName = 1;
}

message FileDeleteRequest {
  string fileName = 1;
}

message FileGetRequest {
  string fileName = 1;
  int64 start = 2;
  int64 end = 3;
}

message FileGetResponse {
  oneof response {
    int64 fileSize = 1;
    bytes fileStream = 2;
  }
}

